minor gap fix?

--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -48,13 +48,13 @@ ul li.active a {
 section {
     display: grid;
     grid-template-columns: 1fr;
+    gap: 10px;
 }
 section div {
     width: 100%;
     img {
         width: 100%;
         height:auto;
-        margin: 10px ;
     }
 
 }
